--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -28,6 +28,7 @@
 			}
 
 			.layadmin-user-login-main {
+                min-width: 332px;
 				width: 385px;
 				margin: 0 auto;
 				box-sizing: border-box
@@ -171,7 +172,7 @@
 				}
 
 				.layadmin-user-login-main {
-					width: 300px
+					width: 332px
 				}
 
 				.layadmin-user-login-box {
@@ -184,9 +185,9 @@
 	<body>
 		<div class="layadmin-user-login-main">
 			<div class="layadmin-user-login-box layadmin-user-login-header">
-				<h2></h2>
-				<p></p>
-				<img width="310" height="150" src="https://images.quanjing.com//age_foto093/high/x8h-1605043.jpg" />
+				<!--<h2></h2>-->
+				<!--<p></p>-->
+				<img width="310" height="150" src="https://images.quanjing.com/age_foto093/high/x8h-1605043.jpg" />
 			</div>
 			<div class="layadmin-user-login-box layadmin-user-login-body layui-form" lay-filter="example">
 				<div class="layui-form-item">
@@ -238,7 +239,7 @@
                 dataType: 'json',
                 success: function (data) {
                     defaultId = data.data[0].id;
-                    scheduleData();
+                    // scheduleData();
                     setSelectData(data.data);
                 }
             });
@@ -264,8 +265,8 @@
 			for(var i = 0, len = data.length; i< len; i++){
 			    var div = '<input class="sch" type="radio" name="classesId" value="'+data[i].id+'" title="'+data[i].name+'（'+data[i].startTime+'-'+data[i].endTime+'）">';
                 $('#schedule').append(div);
-                $('.sch:first').prop('checked', 'true');
 			}
+            $('.sch:first').prop('checked', 'true');
 			form.render();
         }
 
@@ -289,15 +290,15 @@
 		//监听提交
 		form.on('submit(LAY-user-login-submit)', function(data) {
 		    // alert(JSON.stringify(data.field))
-            if(data.field.classesId == null){
-                layer.msg('请选择班次');
-                return;
-            }
-			$.post("/admin/adminLogin",data.field,function(r){
+            // if(data.field.classesId == null){
+             //    layer.msg('请选择班次');
+             //    return;
+            // }
+			$.post("/admin/adminLogin",data.field, function(r){
+                console.log(r)
 				if(r.success){
-				    console.log(r);
-                    localStorage.hotelUserInfo = JSON.stringify(r.data);
-                    location.href=HOME;
+                    localStorage.hotelUserInfo = JSON.stringify(r.data.menu);
+                    // location.href=HOME;
 					return false;
 				}else{
                     layer.alert(r.errMsg);
