--- a/src/main/webapp/center.html
+++ b/src/main/webapp/center.html
@@ -22,13 +22,13 @@
 
 <nav class="hotel-nav">
 
-    <ul class="layui-nav " lay-filter="" id="navMenu">
+    <ul class="layui-nav" lay-filter="" id="navMenu">
 
 
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
-            <a href="javascript:;" id="hotelusername"><img src="//t.cn/RCzsdCq" class="layui-nav-img">唐吉坷德</a>
+            <a href="javascript:;" id="hotelusername"></a>
             <dl class="layui-nav-child">
                 <dd>
                     <a href="javascript:;" id="updateHotel">更换酒店</a>
