--- a/src/main/webapp/managerReport.html
+++ b/src/main/webapp/managerReport.html
@@ -42,7 +42,7 @@
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
-            <a href="javascript:;" id="hotelusername"><img src="" class="layui-nav-img"></a>
+            <a href="javascript:;" id="hotelusername"></a>
             <dl class="layui-nav-child">
                 <dd>
                     <a href="javascript:;" id="updateHotel">更换酒店</a>
