--- a/src/main/webapp/iframe_hotel_floor.html
+++ b/src/main/webapp/iframe_hotel_floor.html
@@ -2,53 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>酒店管理</title>
+    <title>楼层管理</title>
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-<nav class="hotel-nav">
 
-    <ul class="layui-nav " lay-filter="" id="navMenu">
-
-
-    </ul>
-    <ul class="layui-nav layui-layout-right">
-        <li class="layui-nav-item">
-            <a href="javascript:;" id="hotelusername"></a>
-            <dl class="layui-nav-child">
-                <dd>
-                    <a href="javascript:;" id="updateHotel">更换酒店</a>
-                </dd>
-                <dd>
-                    <a href="javascript:;" id="updatePass">修改密码</a>
-                </dd>
-                <dd>
-                    <a href="javascript:;" class="outLogin">退出登录</a>
-                </dd>
-            </dl>
-        </li>
-    </ul>
-</nav>
-<div style="height: 60px;"></div>
-<div class="layui-btn-container" style="margin: 20px auto; width: 90%;">
-    <button class="layui-btn" id="addSchedule">添加</button>
+<div class="layui-btn-container" style="padding: 20px auto; width: 90%;">
+    <button class="layui-btn" style="margin: 0 0 0 40px;" id="addSchedule">添加</button>
 </div>
 <div class="tab-box">
     <table id="hotelManage" lay-filter="hotelManage" class="layui-table"></table>
 </div>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="setup">楼层配置</a>
 </script>
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use(['form', 'laydate', 'table'], function () {
         var $ = layui.$, form = layui.form, laydate = layui.laydate, table = layui.table;
 
+        try{
+            // alert(JSON.parse(localStorage.User).hotelId);
+            var hotelId = JSON.parse(localStorage.User).hotelId;
+        }catch (e){alert("获取酒店信息失败")}
         //初始化表格数据
         var tab = table.render({
             elem: '#hotelManage'
-            , url: api.queryHotelInfo
+            , url: api.queryFloor+"?hotelId="+getUrl("s")
             , method: 'POST'
             , response: {
                 statusName: 'code' //规定数据状态的字段名称，默认：code
@@ -61,7 +41,7 @@
                 return {
                     "code": 200, //解析接口状态
                     "msg": res.errMsg, //解析提示文本
-                    "count": res.data.count, //解析数据长度
+                    // "count": res.data.count, //解析数据长度
                     "data": res.data //解析数据列表
                 };
             }
@@ -69,9 +49,8 @@
             , even: true
             , loading: true // 是否显示加载条
             , cols: [[ //表头
-                {field: 'name', title: '酒店名称', align: 'center'}
-                , {field: 'site', title: '酒店地址', align: 'center'}
-                , {field: 'phone', title: '酒店电话', align: 'center'}
+                {field: 'name', title: '楼层名称', align: 'center'}
+                , {field: 'sort', title: '排序码', align: 'center'}
                 , {fixed: 'right', title: '操作', width: 200, align: 'center', toolbar: '#barDemo'}
             ]]
         });
@@ -82,19 +61,16 @@
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
             var tr = obj.tr; //获得当前行 tr 的DOM对象
 
-            if (layEvent === 'setup') { //设置楼层
-                window.open('iframe_hotel_floor.html?s='+data.id+"&r="+Math.random(),'','width=800,height=400,top=300px,left=300px,location=no')
-
-            } else if (layEvent === 'edit') { //编辑
-                sessionStorage.setItem('hm', JSON.stringify(data));
+            if (layEvent === 'edit') { //编辑
+                sessionStorage.setItem('hotel_floor', JSON.stringify(data));
                 layer.open({
                     type: 2,
                     skin: 'demo-class',
-                    area: ['700px', '40%'],
-                    title: '酒店编辑',
+                    area: ['700px', '80%'],
+                    title: '楼层编辑',
                     shade: 0.6,
                     shadeClose: true,
-                    content: 'iframe_hotelUpdate.html?s=0'+"&r="+Math.random(),
+                    content: 'iframe_hotel_floor_update.html?s=0'+"&r="+Math.random(),
                     end: function (index, layero) {
                         tab.reload();
                     }
@@ -108,10 +84,10 @@
                 type: 2,
                 skin: 'demo-class',
                 area: ['700px', '80%'],
-                title: '酒店添加',
+                title: '楼层添加',
                 shade: 0.6,
                 shadeClose: true,
-                content: 'iframe_hotelUpdate.html?s=1',
+                content: 'iframe_hotel_floor_update.html?s=1'+"&r="+Math.random()+"&hotelId="+getUrl("s"),
                 end: function (index, layero) {
                     tab.reload();
                 }
