--- a/src/main/webapp/cashOrder.html
+++ b/src/main/webapp/cashOrder.html
@@ -129,7 +129,7 @@
                 obj.endTime = new Date(data.field.endTime.replace(/-/, "/").replace(/-/, "/"))
             }
             if(data.field.mate){
-                obj.mate = data.field.mate;
+                obj.condition = data.field.mate;
             }
             tab.reload({
                 where: obj
@@ -158,54 +158,43 @@
                     "code": 200, //解析接口状态
                     "msg": res.errMsg, //解析提示文本
                     "count": res.data.count, //解析数据长度
-                    "data": res.data.cashAccountBOs //解析数据列表
+                    "data": res.data.data //解析数据列表
                 }
             }
             , page: true //开启分页
             , cols: [[ //表头
-                {field: 'orderNum', title: '订单号', align: 'center'}
+                {field: 'orderNumber', title: '订单号', align: 'center'}
                 , {
                     field: 'createTime', title: '支付时间', align: 'center', templet: function (data) {
                         return DateToLStr(new Date(data.createTime.time))
                     }
                 }
                 , {
-                    field: 'state', title: '支付方式', align: 'center', templet: function (data) {
-                        switch (data.state) {
+                    field: 'payType', title: '支付方式', align: 'center', templet: function (data) {
+                        switch (data.payType) {
                             case '':
-                            case 0:
-                                return '';
-                            case 1:
+                            case 'cash':
                                 return '现金';
-                            case 2:
-                                return 'POS';
-                            case 3:
-                                return '其他支付';
-                            case 4:
-                                return '积分支付';
-                            case 5:
-                                return '储值支付';
+                            case 'cart':
+                                return '银行卡';
+                            case 'wechat':
+                                return '微信';
+                            case 'alipay':
+                                return '支付宝';
+                            case 'other':
+                                return '其他';
+                            case 'stored':
+                                return '储值';
+                            case 'integral':
+                                return '积分';
                         }
                     }
                 }
-                , {
-                    field: 'type', title: '消费方式', align: 'center', templet: function (data) {
-                        switch (data.type) {
-                            case '':
-                            case 0:
-                                return '';
-                            case "1":
-                                return '商品';
-                            case "2":
-                                return '赔偿';
-                            case "3":
-                                return '会员卡'
-                        }
-                    }
-                }
-                , {field: 'price', title: '交易金额', align: 'center'}
-                , {field: 'operator', title: '操作员', align: 'center'}
-                , {field: 'info', title: '消费详情', align: 'center'}
+
+                , {field: 'consumeType', title: '消费类型', align: 'center'}
+                , {field: 'money', title: '交易金额', align: 'center'}
+                , {field: 'name', title: '操作员', align: 'center'}
+                , {field: 'consumptionDetails', title: '消费详情', align: 'center'}
                 , {fixed: 'right', title: '操作', width: 200, align: 'center', toolbar: '#barDemo'}
             ]]
         });
