--- a/src/main/webapp/iframe_shop.html
+++ b/src/main/webapp/iframe_shop.html
@@ -30,12 +30,12 @@
     <div class="layui-form-item">
         <label class="layui-form-label">支付方式</label>
         <div class="layui-input-block">
-            <input type="radio" name="payType" lay-filter="payType" value="1" title="现金" checked>
-            <input type="radio" name="payType" lay-filter="payType" value="2" title="刷卡">
-            <input type="radio" name="payType" lay-filter="payType" value="3" title="微信">
-            <input type="radio" name="payType" lay-filter="payType" value="4" title="支付宝">
+            <input type="radio" name="payType" lay-filter="payType" value="cash" title="现金" checked>
+            <input type="radio" name="payType" lay-filter="payType" value="cart" title="刷卡">
+            <input type="radio" name="payType" lay-filter="payType" value="wechat" title="微信">
+            <input type="radio" name="payType" lay-filter="payType" value="alipay" title="支付宝">
             <!--<input type="hidden" name="payType" lay-filter="payType" value="5" title="积分支付">-->
-            <input type="radio" name="payType" lay-filter="payType" value="6" title="储值支付">
+            <input type="radio" name="payType" lay-filter="payType" value="stored" title="储值支付">
         </div>
     </div>
     <div class="optional" style="display: none;">
@@ -64,7 +64,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">金额</label>
             <div class="layui-input-inline">
-                <input type="number" name="orderPrice" lay-verify="required" id="orderPrice" placeholder="请输入金额"
+                <input type="number" name="money" lay-verify="required" id="money" placeholder="请输入金额"
                        autocomplete="off"
                        class="layui-input">
             </div>
@@ -73,21 +73,21 @@
     <div class="layui-form-item">
         <label class="layui-form-label">消费详情</label>
         <div class="layui-input-inline">
-            <textarea name="orderInfo" required lay-verify="required" id="orderInfo" placeholder="请输入消费详情信息"
+            <textarea name="info" required lay-verify="required" id="info" placeholder="请输入消费详情信息"
                       class="layui-textarea"></textarea>
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">消费类型</label>
         <div class="layui-input-block">
-            <input type="radio" name="type" value="1" title="商品" checked>
-            <input type="radio" name="type" value="2" title="赔偿">
+            <input type="radio" name="consumptionType" value="商品" title="商品" checked>
+            <input type="radio" name="consumptionType" value="赔偿" title="赔偿">
         </div>
     </div>
     <div class="layui-input-block" style="position: fixed; right: 10px; bottom: 10px;">
         <button class="layui-btn layui-btn-sm" lay-submit lay-filter="tally">挂账</button>
-        <button class="layui-btn layui-btn-sm" lay-submit lay-filter="formData">自动生效</button>
-        <button class="layui-btn layui-btn-sm" lay-submit lay-filter="formData" data-id="1">手动生效</button>
+        <button class="layui-btn layui-btn-sm" lay-submit lay-filter="formData">生效</button>
+        <!--<button class="layui-btn layui-btn-sm" lay-submit lay-filter="formData" data-id="1">手动生效</button>-->
         <button type="button" class="layui-btn layui-btn-sm layui-btn-primary" id="back">取消</button>
     </div>
 </form>
@@ -133,7 +133,7 @@
             //判断选中的是否是储值支付和积分支付
             switch (data.value) {
                 case "5":
-                case "6":
+                case "stored":
                     //选中储值支付和积分支付后先控制身份证
                     $('.optional').show();
                     $('.optional_1').hide();
@@ -165,7 +165,7 @@
                 title: '挂账',
                 shade: 0.6,
                 shadeClose: true,
-                content: 'iframe_tally.html?s=1',
+                content: 'iframe_tally.html?s=1&r='+Date.now(),
                 end: function () {
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                     parent.layer.close(index); //再执行关闭
@@ -178,117 +178,19 @@
         form.on('submit(formData)', function (data) {
             str = "";
             dataInfo = data.field;
-            layer_index = parent.layer.load(1, {time: 10 * 1000});
-            flagg = $(this).data("id") == 1;
-            pay(data.field.payType);
+            console.log(dataInfo);
+            Receive1(dataInfo)
             return false;
         });
 
-        function pay(_p) {
-            if (_p == '1' || (_p != "1" && dataInfo.orderPrice == 0)) { //现金支付或者支付金额为0
-                Receive1(JSON.stringify({state: 1}));
-            } else if (_p == "5" || _p == "6") {
-                //积分判断
-                if (_p == "5" && parseInt(payValue.integValue) < dataInfo.orderPrice) {
-                    layer.alert("积分不足,交易失败！");
-                    return false;
-                }
-                //储值判断
-                if (_p == "6" && parseInt(payValue.streValue) < dataInfo.orderPrice) {
-                    layer.alert("储值余额不足,交易失败！");
-                    return false;
-                }
-                Receive1(JSON.stringify({credentialNumber: dataInfo.IDCard, state: _p == "5" ? 4 : 5}));
-            } else if (flagg) {//手动支付
-                var pt = '';
-                if (_p == 2) {
-                    pt = 0;
-                } else if (_p == 3) {
-                    pt = 1;
-                } else if (_p == 4) {
-                    pt = 2;
-                }
-                Receive1(JSON.stringify({payTp: pt, code: 1, transAmount: dataInfo.orderPrice}))
-            } else {//POS支付
-                var payjson = checkPayState(_p);
-                payjson = $.extend({}, PAYJSON, payjson);
 
-                if (!price) {
-                    layer.alert("交易金额有误");
-                    parent.layer.close(layer_index);
-                    return false;
-                }
-                payjson.amt = price;
-                payjson.orderNo = "";
-                Send(JSON.stringify(payjson));
-            }
-        }
     })
-    ;
 
-    setTimeout(function () {
-        MSComm1.PortOpen == false;
-        OperatePort();
-    }, 1000)
 
-    function OperatePort() {
-        if (MSComm1.PortOpen == true) {
-            try {
-                MSComm1.PortOpen = false;
-            } catch (ex) {
-                alert(ex.message);
-            }
-        } else {
-            try {
-                MSComm1.CommPort = localStorage.posport ? localStorage.posport : 6;
-                MSComm1.Settings = 115200 +
-                    ",N" +
-                    ",8" +
-                    ",1";
-                MSComm1.OutBufferCount = 0; //清空发送缓冲区
-                MSComm1.InBufferCount = 0; //滑空接收缓冲区
-                MSComm1.PortOpen = true;
-            } catch (ex) {
-                alert(ex.message);
-            }
-        }
-    }
+    function Receive1(dataInfo) {
 
-    function Send(orgstr) {
-        try {
-            MSComm1.Output = orgstr;
-            console.info("发送数据到pos机：" + orgstr);
-        } catch (ex) {
-            alert(ex.message);
-        }
-    }
-
-    function Receive() {
-        str += MSComm1.Input;
-        if (str.indexOf('}') != -1) {
-            Receive1(str)
-        }
-    }
-
-    function Receive1(data) {
-        console.log("接收到的数据:" + data)
-        var _data = JSON.parse(data);
-        if (_data.code == '-1') {
-            showMsg(_data.message, 2, false);
-            parent.layer.close(layer_index);
-            return;
-        }
-        var pd = {
-            price: dataInfo.orderPrice,
-            info: dataInfo.orderInfo,
-            type: dataInfo.type,
-            state: 2
-        }
-        pd = $.extend({}, pd, JSON.parse(data));
-        // alert(JSON.stringify(pd));
-        // alert(data)
         $.ajax({
-            data: pd,
+            data: dataInfo,
             type: "POST",
             dataType: "JSON",
             url: api.cashAdd,
