--- a/src/main/webapp/iframe_tally.html
+++ b/src/main/webapp/iframe_tally.html
@@ -42,7 +42,7 @@
                 type: 'POST',
                 dataType: 'json',
                 data: {
-                    name: data.field.roomNum
+                    roomName: data.field.roomNum
                 },
                 success: function (rs) {
                     console.log(rs);
@@ -55,7 +55,7 @@
                             title: '挂账',
                             shade: 0.6,
                             shadeClose: true,
-                            content: 'iframe_tallyInfo.html',
+                            content: 'iframe_tallyInfo.html?v='+Date.now(),
                             end: function () {
                                 var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                                 parent.layer.close(index); //再执行关闭
