--- a/src/main/webapp/iframe_pick_room3.html
+++ b/src/main/webapp/iframe_pick_room3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>选房</title>
+    <title>预约选房</title>
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body style="width: 800px;background: #eee;">
